--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
                                     <p class="my-0">My Account</p>
                                 </div>
                             </a>
-                            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            <div class="dropdown-menu border-0" aria-labelledby="user-options-toggle">
                                 {% if request.user.is_authenticated %}
                                     {% if request.user.is_superuser %}
                                         <a href="{% url 'book_management' %}" class="dropdown-item">Book Management</a>
