--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,7 +6,7 @@
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-books-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Books
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-books-link">
@@ -20,7 +20,7 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="categories-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Categories
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu border-0" aria-labelledby="categories-link">
                 {% for category in categories %}
                     <a class="dropdown-item" href="{% url 'books' %}?category={{ category.name }}">{{ category.friendly_name }}</a>
                 {% endfor %}
