--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -99,11 +99,11 @@
                     </div>
 
                     <!-- Modal -->
-                    <div class="modal fade" id="confirmDeleteModal_{{ book.id }}" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="confirmDeleteModal_{{ book.id }}" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel_{{ book.id }}" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Deletion</h5>
+                                    <h5 class="modal-title" id="confirmDeleteModalLabel_{{ book.id }}">Confirm Deletion</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
