Add html validator screenshots to TESTING.md

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -146,7 +146,7 @@
     {{ block.super }}
     {% include 'books/includes/quantity_input_script.html' %}
     
-    <script type="text/javascript">
+    <script>
         var itemIdToRemove = null;
 
         // Update quantity on click
