--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
+                <div class="image-container my-5 pt-5">
                     {% if book.image %}
                         <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }} book cover">
                     {% else %}
@@ -22,7 +22,7 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 pt-5">
                 <div class="book-details-container mb-5 mt-md-5">
                     <h2 class="mb-0">{{ book.title }}</h2>
                     <p><strong>Format:</strong> {{ book.get_format_display }}</p>
