--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,8 @@ body {
     font-family: 'Lato', sans-serif;
     display: flex;
     flex-direction: column;
+    height: 100px;
+    width: 100px;
 }
 
 .wrapper {
