--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-2 logo-font text-white" id="display">
+                <h1 class="display-2 logo-font text-white pt-5" id="display">
                     Explore Cookbooks here
                 </h1>
             </div>
