--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,6 +110,9 @@ body {
 
 #display {
     margin-top: 25%;
+}
+
+h1#display,display-2.logo-font.text-white.pt-5 {
     display: table-caption;
 }
 
